[package]
name = "bevy_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9" }
bevy_asset_loader = { version = "0.14", features = ["stageless"] }
iyes_loopless = { version = "0.9" }